// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Seo handles missing title template 1`] = `
[
  <title>
    Test Site
  </title>,
  <meta
    content="var(--theme-ui-colors-background)"
    name="theme-color"
  />,
  <meta
    content="Test Site"
    property="og:title"
  />,
  <meta
    content="summary_large_image"
    name="twitter:card"
  />,
  <meta
    content="Test Site"
    name="twitter:title"
  />,
  <link
    href="https://webmention.io/test.com/webmention"
    rel="webmention"
  />,
]
`;

exports[`Seo handles title template replacement 1`] = `
[
  <title>
    Custom Page Title Template
  </title>,
  <meta
    content="var(--theme-ui-colors-background)"
    name="theme-color"
  />,
  <meta
    content="Custom Page Title Template"
    property="og:title"
  />,
  <meta
    content="summary_large_image"
    name="twitter:card"
  />,
  <meta
    content="Custom Page Title Template"
    name="twitter:title"
  />,
  <link
    href="https://webmention.io/test.com/webmention"
    rel="webmention"
  />,
]
`;

exports[`Seo matches the snapshot with basic props 1`] = `
[
  <title>
    Test Page | Test Site
  </title>,
  <meta
    content="Test description"
    name="description"
  />,
  <meta
    content="var(--theme-ui-colors-background)"
    name="theme-color"
  />,
  <meta
    content="Test Page | Test Site"
    property="og:title"
  />,
  <meta
    content="Test description"
    property="og:description"
  />,
  <meta
    content="summary_large_image"
    name="twitter:card"
  />,
  <meta
    content="Test Page | Test Site"
    name="twitter:title"
  />,
  <meta
    content="Test description"
    name="twitter:description"
  />,
  <link
    href="https://webmention.io/test.com/webmention"
    rel="webmention"
  />,
]
`;

exports[`Seo renders with all optional props 1`] = `
[
  <title>
    Test Page | Test Site
  </title>,
  <meta
    content="Test description"
    name="description"
  />,
  <meta
    content="https://example.com/image.jpg"
    name="image"
  />,
  <meta
    content="var(--theme-ui-colors-background)"
    name="theme-color"
  />,
  <meta
    content="Test Page | Test Site"
    property="og:title"
  />,
  <meta
    content="test, keywords"
    name="keywords"
  />,
  <meta
    content="article"
    property="og:type"
  />,
  <meta
    content="Test description"
    property="og:description"
  />,
  <meta
    content="https://example.com/image.jpg"
    property="og:image"
  />,
  <meta
    content="summary_large_image"
    name="twitter:card"
  />,
  <meta
    content="Test Page | Test Site"
    name="twitter:title"
  />,
  <meta
    content="https://example.com/image.jpg"
    name="twitter:image"
  />,
  <meta
    content="Test description"
    name="twitter:description"
  />,
  <link
    href="https://webmention.io/test.com/webmention"
    rel="webmention"
  />,
]
`;

exports[`Seo renders with children 1`] = `
[
  <title>
    Test Page | Test Site
  </title>,
  <meta
    content="var(--theme-ui-colors-background)"
    name="theme-color"
  />,
  <meta
    content="Test Page | Test Site"
    property="og:title"
  />,
  <meta
    content="summary_large_image"
    name="twitter:card"
  />,
  <meta
    content="Test Page | Test Site"
    name="twitter:title"
  />,
  <link
    href="https://webmention.io/test.com/webmention"
    rel="webmention"
  />,
  <meta
    content="value"
    name="custom"
  />,
]
`;

exports[`Seo renders without article prop 1`] = `
[
  <title>
    Test Page | Test Site
  </title>,
  <meta
    content="Test description"
    name="description"
  />,
  <meta
    content="var(--theme-ui-colors-background)"
    name="theme-color"
  />,
  <meta
    content="Test Page | Test Site"
    property="og:title"
  />,
  <meta
    content="Test description"
    property="og:description"
  />,
  <meta
    content="summary_large_image"
    name="twitter:card"
  />,
  <meta
    content="Test Page | Test Site"
    name="twitter:title"
  />,
  <meta
    content="Test description"
    name="twitter:description"
  />,
  <link
    href="https://webmention.io/test.com/webmention"
    rel="webmention"
  />,
]
`;

exports[`Seo renders without description 1`] = `
[
  <title>
    Test Page | Test Site
  </title>,
  <meta
    content="var(--theme-ui-colors-background)"
    name="theme-color"
  />,
  <meta
    content="Test Page | Test Site"
    property="og:title"
  />,
  <meta
    content="summary_large_image"
    name="twitter:card"
  />,
  <meta
    content="Test Page | Test Site"
    name="twitter:title"
  />,
  <link
    href="https://webmention.io/test.com/webmention"
    rel="webmention"
  />,
]
`;

exports[`Seo renders without image 1`] = `
[
  <title>
    Test Page | Test Site
  </title>,
  <meta
    content="Test description"
    name="description"
  />,
  <meta
    content="var(--theme-ui-colors-background)"
    name="theme-color"
  />,
  <meta
    content="Test Page | Test Site"
    property="og:title"
  />,
  <meta
    content="Test description"
    property="og:description"
  />,
  <meta
    content="summary_large_image"
    name="twitter:card"
  />,
  <meta
    content="Test Page | Test Site"
    name="twitter:title"
  />,
  <meta
    content="Test description"
    name="twitter:description"
  />,
  <link
    href="https://webmention.io/test.com/webmention"
    rel="webmention"
  />,
]
`;

exports[`Seo renders without keywords 1`] = `
[
  <title>
    Test Page | Test Site
  </title>,
  <meta
    content="Test description"
    name="description"
  />,
  <meta
    content="var(--theme-ui-colors-background)"
    name="theme-color"
  />,
  <meta
    content="Test Page | Test Site"
    property="og:title"
  />,
  <meta
    content="Test description"
    property="og:description"
  />,
  <meta
    content="summary_large_image"
    name="twitter:card"
  />,
  <meta
    content="Test Page | Test Site"
    name="twitter:title"
  />,
  <meta
    content="Test description"
    name="twitter:description"
  />,
  <link
    href="https://webmention.io/test.com/webmention"
    rel="webmention"
  />,
]
`;

exports[`Seo renders without twitter username 1`] = `
[
  <title>
    Test Page | Test Site
  </title>,
  <meta
    content="Test description"
    name="description"
  />,
  <meta
    content="var(--theme-ui-colors-background)"
    name="theme-color"
  />,
  <meta
    content="Test Page | Test Site"
    property="og:title"
  />,
  <meta
    content="Test description"
    property="og:description"
  />,
  <meta
    content="summary_large_image"
    name="twitter:card"
  />,
  <meta
    content="Test Page | Test Site"
    name="twitter:title"
  />,
  <meta
    content="Test description"
    name="twitter:description"
  />,
  <link
    href="https://webmention.io/test.com/webmention"
    rel="webmention"
  />,
]
`;

exports[`Seo renders without webmention URL 1`] = `
[
  <title>
    Test Page | Test Site
  </title>,
  <meta
    content="Test description"
    name="description"
  />,
  <meta
    content="var(--theme-ui-colors-background)"
    name="theme-color"
  />,
  <meta
    content="Test Page | Test Site"
    property="og:title"
  />,
  <meta
    content="Test description"
    property="og:description"
  />,
  <meta
    content="summary_large_image"
    name="twitter:card"
  />,
  <meta
    content="Test Page | Test Site"
    name="twitter:title"
  />,
  <meta
    content="Test description"
    name="twitter:description"
  />,
]
`;
